[package]
name = "bevy-pong"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
phys-viz = ["heron/debug-2d"]

[dependencies]
# Base engine dependency.
bevy = "0.7"
# 2D physics. Mostly used for collision detection.
heron = { version = "3", features = ["2d"] }
# For quick, simple random number generation.
fastrand = "1"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
